--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ main {
 
 main img {
     min-width: 300px;
-    max-width: 1000px;
+    max-width: 100vw;
     display: block;
     margin: auto;
 }
